--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "target": "ES6",
-    "outDir": "./dist",
-    "rootDir": "./",
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "outDir": "dist",
+    "rootDir": ".",
     "strict": true,
-    "noEmit": true,
-    "allowImportingTsExtensions": true
-  }
+    "esModuleInterop": true
+  },
+  "include": ["**/*.ts"]
 }
