--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/dotenv": "^8.2.3",
+        "@types/nodemailer": "^6.4.17",
         "nodemon": "^3.1.9",
         "ts-node": "^10.9.2",
         "tsc-watch": "^6.2.1",
@@ -19,6 +21,10 @@
         "esm": true
     },
     "dependencies": {
+        "@emailjs/browser": "^4.4.1",
+        "dotenv": "^16.5.0",
+        "emailjs-com": "^3.2.0",
+        "googleapis": "^148.0.0",
         "nodemailer": "^6.10.0"
     }
 }
