--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "dotenv": "^16.4.7",
     "nodemon": "^3.1.9",
     "pg": "^8.14.1",
     "tsc-watch": "^6.2.1",
